# Horiz-Operating-System

./: Dockerfile.build  README.md  build.sh
.github/workflows/: docker-publish.yml
docs/: README.md
docs/commands/: horiz-utils.md
horiz-core/: Cargo.toml
horiz-core/.cargo/: config.toml
horiz-core/crates/horiz-auth/: Cargo.toml
horiz-core/crates/horiz-auth/src/: lib.rs
horiz-core/crates/horiz-init/: Cargo.toml
horiz-core/crates/horiz-init/src/: main.rs
horiz-core/crates/horiz-pkg/: Cargo.toml
horiz-core/crates/horiz-pkg/src/: ed25519.rs  main.rs  sha512.rs
horiz-core/crates/horiz-sh/: Cargo.toml
horiz-core/crates/horiz-sh/src/: main.rs
horiz-core/crates/horiz-utils/: Cargo.toml
horiz-core/crates/horiz-utils/src/: lib.rs  main.rs
rootfs/etc/: group  passwd  shadow
rootfs/etc/horiz/: pubkey
scripts/: build_iso.sh  build_kernel.sh  build_rootfs.sh
