[workspace]
members = [
    "crates/horiz-init", "crates/horiz-pkg",
    "crates/horiz-sh",
    "crates/horiz-utils",
    "crates/horiz-auth",
]
resolver = "2"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link Time Optimization
codegen-units = 1
panic = "abort"  # Reduce binary size
strip = true     # Strip symbols
